# asr_core

./: CLAUDE.md  README.md  asr_core.toml  pyproject.toml
doc/adr/: 0001-gpu-memory-cleanup-after-transcription.md
models/: Qwen3-ASR-1.7B  qwen3-asr-0.6b
services/: asr-core-dashboard.service  asr-core.service
src/asr_core/: __init__.py  api.py  audio.py  client.py  config.py  models.py  server.py  transcriber.py
src/asr_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/asr_core/dashboard/: __main__.py  app.py  systemd.py
src/asr_core/dashboard/static/: style.css
src/asr_core/dashboard/templates/: base.html  index.html
src/asr_core/dashboard/templates/partials/: status.html
tests/: test_audio.py  test_config.py  test_models.py
